--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1358,3 +1358,13 @@ section {
 #footer .credits a {
   color: #9eccf4;
 }
+
+.showuser {
+  color: navy;
+  font-size: small;
+  height: 46px;
+  /* top: 20px; */
+  background-color:white;
+  text-align: center;
+  min-width: 150px;
+}
